Add clickable dialogue options